--- a/pylama.ini
+++ b/pylama.ini
@@ -11,4 +11,4 @@ max_line_length = 125
 max-line-length = 125
 
 
-disable = C0103,C0111,R0916,R0914,C901,
+disable = C0103,C0111,R0916,R0914,C901,W0406
