Overwrite requirements.txt (proper)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-attrs==19.3.0
-certifi==2019.11.28
-chardet==3.0.4
-colorama==0.4.3
-coloredlogs==10.0
-humanfriendly==4.18
-idna==2.8
-jsonschema==3.2.0
-pyrsistent==0.15.6
-requests==2.22.0
-six==1.13.0
-tqdm==4.40.2
-urllib3==1.25.7
-verboselogs==1.7
+verboselogs
+requests
+coloredlogs
+colorama
+tqdm
+jsonschema
+pytest
