--- a/pylama.ini
+++ b/pylama.ini
@@ -11,4 +11,4 @@ max_line_length = 125
 max-line-length = 125
 
 
-disable = C0103,C0111,R0916,R0914,C901,W0406
+disable = C0103,C0114,C0115,C0116,C0301,R0902,R0911,R0912,R0913,R0914,R0915,R0916
